
** gpr-query, gnat-compiler, gpr-mode each split out to a separate
   Emacs package and Alire crate.

** ada-xref-tool renamed to ada-xref-backend; now supports choice eglot.

** New user configuration variables; ada-indent-backend, ada-face-backend.

** Declared user configuration variable ada-language-version obsolete;
   it is no longer used (Ada 2022 is assumed).

** Minor bug fixes.

* Ada Mode 7.3.beta
9 Jul 2022 beta testing

** Support incremental parse. Set wisi-incremental-parse-enable t to
   experiment with this; default is nil, because the parser often gets
   confused.

   When the parser gets confused (which is fairly often), use M-x
   wisi-reset-parser to recover.

   When using incremental parse, it is best to keep the number of
   errors in the file small; the parse time is proportial to the
   number of errors, and error recover is often noticeably slow .

** The Ada grammar is updated to the proposed Ada 2022 standard, and
   is now in the file ada_annex_p.wy.

** ada-end-name-optional now defaults to 't', to match the
   expectations of new Ada users. Experienced users that follow a
   style guide requiring matching end names should set this to 'nil',
   since that gives better error correction.

** New indent option add ada-indent-subprogram-is; indentation of 'is'
   in expression functions and similar subprogram declarations.
   Previously, this was ada-indent-broken; now you can set it
   separately (ie to 0).

** Indentation of 'is' and 'with' in null and abstract subprogram
   specification is now consistent with non-abstract subprogram
   specification and expression function.

** Indentation of comment in subprogram body after param_list before
   'is' matches subprogram spec;

   procedure Foo
     (A : in Integer)
   --  Computes stuff
   is ...

** ada-make-subprogram-body now inserts "null;"; this eliminates a
   syntax error, improving incremental parse. Similarly, the skeleton